<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_groups"
            android:icon="@android:drawable/ic_lock_idle_alarm"
            android:title="@string/my_alarms_menu" />
        <item
            android:id="@+id/nav_info"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/info_menu" />
        <item
            android:id="@+id/nav_logOut"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/sign_out_menu" />
    </group>

    <item android:title="Support">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/contact_menu" />
        </menu>
    </item>
</menu>