<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.VistaAlarmas">

    <TextView
        android:id="@+id/hoursTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/hour_selection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoursTitle" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoursTitle">

        <NumberPicker
            android:id="@+id/vHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:clickable="false"
            android:soundEffectsEnabled="false"
            android:theme="@style/NumberPickerTheme" />

        <TextView
            android:id="@+id/separator"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="  :"
            android:textSize="36sp" />

        <NumberPicker
            android:id="@+id/vMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:clickable="false"
            android:soundEffectsEnabled="false"
            android:theme="@style/NumberPickerTheme" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <ToggleButton
            android:id="@+id/vMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:text="ToggleButton"
            android:textColorHighlight="@color/principal"
            android:textColorLink="#FFFFFF"
            android:textCursorDrawable="@color/principal"
            android:textOff="@string/monday"
            android:textOn="@string/monday" />

        <ToggleButton
            android:id="@+id/vTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:text="ToggleButton"
            android:textColorLink="@color/principal"
            android:textOff="@string/tuesday"
            android:textOn="TU" />

        <ToggleButton
            android:id="@+id/vWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:text="ToggleButton"
            android:textColorLink="@color/principal"
            android:textOff="@string/wednesday"
            android:textOn="@string/wednesday" />

        <ToggleButton
            android:id="@+id/vThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:text="ToggleButton"
            android:textColorLink="@color/principal"
            android:textOff="@string/thursday"
            android:textOn="@string/thursday" />

        <ToggleButton
            android:id="@+id/vFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:text="ToggleButton"
            android:textColorLink="@color/principal"
            android:textOff="@string/friday"
            android:textOn="@string/friday" />

        <ToggleButton
            android:id="@+id/vSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:text="ToggleButton"
            android:textColorLink="@color/principal"
            android:textOff="@string/saturday"
            android:textOn="@string/saturday" />

        <ToggleButton
            android:id="@+id/vSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:text="ToggleButton"
            android:textColorLink="@color/principal"
            android:textOff="@string/sunday"
            android:textOn="@string/sunday" />

    </LinearLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/vMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/title"
            android:inputType="textPersonName" />
    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bRemoveAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:backgroundTint="#F00"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bBackFromVistaAlarmas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:clickable="true"
            app:srcCompat="?attr/homeAsUpIndicator" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bActivateAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:clickable="true"
            app:backgroundTint="@color/principal"
            app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>